tests/ifcc-test-output/testfiles-3_01_10_var_name_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: stray ‘\302’ in program
    2 |     int ¼;
      |         ^
input.c:2:10: error: stray ‘\274’ in program
    2 |     int ¼;
      |          ^
input.c:2:5: warning: useless type name in empty declaration
    2 |     int ¼;
      |     ^~~

return code: 1
